--- a/src/components/dbcomponents/HistorySummary.css
+++ b/src/components/dbcomponents/HistorySummary.css
@@ -38,3 +38,8 @@
   border-radius: 50%;
   font-weight: bold;
 }
+
+.specialIcon svg{
+  position: relative;
+  top: 0px;
+}
